# system-information

./: CMakeLists.txt  Cargo.toml
src/: main.c  main.rs
